--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ a {
     width: 300px;
     color:  black;
     text-align: center;
-    margin: 10px;
+    margin: 20px 10px;
     border-radius: 12px;
     background-color: #D3D3D3;
 }
