--- a/css/style.css
+++ b/css/style.css
@@ -354,8 +354,8 @@ footer {
         padding-left: 16px;
     }
 
-    nav {
-        display: inline;
+    nav.navbar {
+        padding: 0 10px;
     }
 
     button {
@@ -382,7 +382,7 @@ footer {
     }
 
     .header-space {
-        height: 90px;
+        height: 80px;
     }
 
     /* ------------------- banner ------------------- */
