background image change and some color change

--- a/css/style.css
+++ b/css/style.css
@@ -60,12 +60,15 @@ a {
     justify-content: center;
     text-align: center;
     background-color: #444957;
+    background-image: url("https://res.cloudinary.com/dvxvez8mj/image/upload/v1618456640/background_chmhga.jpg");
     background-position: center;
-    background-size: 690px;
+    opacity: 0.8;
+    background-size: 768px;
 }
 
 .banner {
     color:white;
+    text-shadow: -15px 5px 5px black;
     font-weight: 900;
     font-style: italic;
     animation-duration: 2s;
@@ -85,7 +88,7 @@ a {
 }
 
 #about {
-    background-color: rgb(76, 72, 102);
+    background-color: rgb(58, 66, 100);
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto auto auto;
@@ -155,7 +158,7 @@ a {
 }
 
 #about-text {
-    background-color: rgb(76, 72, 102);
+    background-color: rgb(58, 66, 100);
     color: white;
 }
 
@@ -170,7 +173,7 @@ a {
 }
 
 #project-cards {
-    background-color: rgb(168, 164, 182);
+    background-color: rgb(142, 161, 185);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -309,7 +312,7 @@ footer {
     /* ------------------- banner ------------------- */
     #banner {
         height: 25em;
-        background-size: 950px;
+        background-size: 1024px;
     }
 
     #my-name {
@@ -439,7 +442,7 @@ footer {
     /* ------------------- banner ------------------- */
     #banner {
         height: 35em;
-        background-size: 110em 35em;
+        background-size: 1900px;
     }
 
     #my-name {
