--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html {
 #project-cards,
 form{
     padding: 10px;
-    margin-bottom: 10px;
+    margin: 10px;
 }
 
 /* ------------------- Header - navbar ------------------- */
@@ -191,13 +191,14 @@ a {
 }
 
 .card {
-    height: 360px;
+    height: 390px;
     width: 300px;
     color:  black;
     text-align: center;
     margin: 20px 10px;
-    border-radius: 12px;
+    border-radius: 10px;
     background-color: #D3D3D3;
+    border: 1px solid white;
     transition: all 0.5s;
 }
 
@@ -211,6 +212,7 @@ a {
 
 .project {
     font-weight: 700;
+    margin: 10px auto;
 }
 
 .image {
@@ -223,6 +225,7 @@ a {
 
 .description {
     font-size: 20px;
+    margin-top: 10px
 }
 
 .links {
