--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ nav.navbar {
 
 #logo {
     height: 50px;
+    width: 39px;
     align-self: center;
     margin: 0;
     opacity: .4;
@@ -57,7 +58,7 @@ a {
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    background-image: url("https://res.cloudinary.com/dvxvez8mj/image/upload/v1618456640/background_chmhga.jpg");
+    background-image: url("https://res.cloudinary.com/dvxvez8mj/image/upload/c_scale,q_100,w_1900/v1618456640/background_chmhga.jpg");
     background-position: center;
     opacity: 0.75;
     background-size: 768px;
@@ -186,7 +187,6 @@ a {
 }
 
 .card {
-    height: 390px;
     width: 300px;
     color:  black;
     text-align: center;
@@ -210,8 +210,8 @@ a {
 }
 
 .project {
-    font-weight: 700;
-    margin: 10px auto;
+    font-weight: 800;
+    margin: 15px auto;
 }
 
 .image {
@@ -230,6 +230,7 @@ a {
 .links {
     display: flex;
     justify-content: space-evenly;
+    padding-bottom: 25px;
 }
 
 .links .btn:hover {
@@ -306,8 +307,8 @@ footer {
 @media screen and (min-width: 768px) {
     /* ------------------- nav ------------------- */
     #logo {
-        /* font-size: 3em; */
         height: 57px;
+        width: 45px;
     }
 
     div.navbar-nav a.nav-link {
@@ -422,9 +423,9 @@ footer {
 @media screen and (min-width: 1024px) {
     /* ------------------- nav ------------------- */
     #logo {
-        /* font-size: 4em; */
         height: 80px;
-        padding-left: 16px;
+        width: 63px;
+        margin-left: 16px;
     }
 
     nav.navbar {
